# mcts_zuniq

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  compile.sh  config.hpp  gen_test.py  generate_submission_file.py  main.cpp  static-analysis.sh  tests.cpp  tests_runner.cpp  zuniq.hpp
lib/: catch.hpp
